--- a/package.json
+++ b/package.json
@@ -31,10 +31,16 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.1.3",
     "@prisma/client": "latest",
+    "bcrypt-ts": "^6.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "nestjs-prisma": "^0.25.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "tsx": "^4.19.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -82,6 +88,6 @@
     "testEnvironment": "node"
   },
   "prisma": {
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "tsx prisma/seed.ts"
   }
 }
